Style updates. Resolve product listing alignment issue

--- a/app/sass/_forms.sass
+++ b/app/sass/_forms.sass
@@ -13,9 +13,6 @@ form textarea
   outline: none
   width: 100%
 
-form textarea
-  padding-top: 10px
-
 input[type="submit"]
   width: auto
 
