--- a/app/sass/_global.sass
+++ b/app/sass/_global.sass
@@ -35,3 +35,26 @@ body
   .close
     padding-top: 10px
     font-size: 1.1em
+
+// Wordpress default layout classes
+img.alignright
+  float: right
+  margin: 10px 0 10px 10px
+  display: inline-block
+
+  @media screen and ( max-width: 992px )
+    float: none
+    margin: 10px
+
+img.alignleft
+  float: left
+  margin: 10px 10px 10px 0
+  display: inline-block
+
+  @media screen and ( max-width: 992px )
+    float: none
+    margin: 10px
+
+img.aligncenter
+  display: block
+  margin: 10px auto
